RESOLVED FIXED199784
naver.com: Video stops when tapping on the video to use buttons
https://bugs.webkit.org/show_bug.cgi?id=199784
Summary naver.com: Video stops when tapping on the video to use buttons
alan
Reported 2019-07-14 10:40:28 PDT
Attachments
Patch (1.83 KB, patch)
2019-07-14 10:47 PDT, alan
no flags
alan
Comment 1 2019-07-14 10:47:22 PDT
WebKit Commit Bot
Comment 2 2019-07-15 06:39:37 PDT
Comment on attachment 374086 [details] Patch Clearing flags on attachment: 374086 Committed r247429: <https://trac.webkit.org/changeset/247429>
WebKit Commit Bot
Comment 3 2019-07-15 06:39:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.