naver.com: Video stops when tapping on the video to use buttons https://bugs.webkit.org/show_bug.cgi?id=199784 <rdar://problem/48068610>

Reviewed by Maciej Stachowiak.

Opt out of simulated mouse event sending for tv.naver.com.
When tv.naver.com receives the simulated mouseUp at touchEnd, it pauses the video right away and calls preventDefault()
which prevents us from running the hover heuristics.

* page/Quirks.cpp:
(WebCore::Quirks::shouldDispatchSimulatedMouseEvents const):


Canonical link: https://commits.webkit.org/213662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247429 268f45cc-cd09-0410-ab3c-d52691b4dbfc